- 03: Issue #675: Workaround for truncated result tree lines in Find&Replace <2>
- 03: Issue #677: Inconveniences on saving arrangement archives mended <2>
- 03: Bugfix #678: Import of array declarations from C code didn't work. <2> 
- 03: Bugfix #679: C import produced defective INPUT instructions <2>
- 03: Enh. #680: INPUT instructions with multiple input items supported <2>
- 03: Enh. #681: A Number of exports may offer to change favorite export language <2>
- 03: Enh. #682: Improved welcome dialog, now with language selection <2>
- 04: Issue #51,#137: Executor window now reflects explicit prompts of empty inputs <2>

Version: 3.29 (2019-01-07)
- 01: Bugfix #511: Cursor-down key was trapped by collapsed CASE and PARALLEL <2>
- 01: Enh. #515: More intelligent aligning strategy for diagrams in Arranger <2>
- 01: Bugfix #517: Correct export of includable declarations to Java, C++, C# <2>
- 01: Bugfix #518: Very slow scrolling of diagrams lacking type info [TiNNiT]2
- 01: Bugfix #520: "no conversion" export mode had to be enforced (Pascal, C) <2>
- 01: Bugfix #521: Variable declaration export had been inconsistent for Oberon <2>
- 01: Enh. #519: Zooming / font size control via ctrl + mouse wheel [B. Neuberg]2
- 01: Bugfix #522: Outsourcing now copes better with record types and includes <2>
- 01: Bugfix #523: Undoing and redoing of include list changes mended <2>
- 02: Bugfix #525: Defective test coverage detection for recursive routines,
      lacking operation counts on input, output, and jump instructions fixed <2>
- 02: Issue #512: Arranger zoom compensation for PNG export was flawed <2>
- 02: Bugfix #526: On re-saving the renaming of the temp. file may fail (Linux) <2>
- 02: Issue #527: More helpful Executor messages on index range violations <2>
- 02: Issue #463: Console output replaced by configurable logging [R. Schmidt]2
- 02: Bugfix #528: Analyser check of record component access mended <2>