@@ -34,9 +34,10 @@ Current development version: 3.29-04 (2019-02-17)
 - 03: Bugfix #678: Import of array declarations from C code didn't work. <2> 
 - 03: Bugfix #679: C import produced defective INPUT instructions <2>
 - 03: Enh. #680: INPUT instructions with multiple input items supported <2>
-- 03: Enh. #681: A Number of exports may offer to change favorite export language <2>
+- 03: Enh. #681: A number of exports may offer to change favorite export language <2>
 - 03: Enh. #682: Improved welcome dialog, now with language selection <2>
-- 04: Issue #51,#137: Executor window now reflects explicit prompts of empty inputs <2>
+- 04: Issue #51,#137: Executor window now logs explicit prompts of empty inputs <2>
+- 04: Issue #684: Distinction + check of mandatory fields in Parser Preferences <2>
 
 Version: 3.29 (2019-01-07)
 - 01: Bugfix #511: Cursor-down key was trapped by collapsed CASE and PARALLEL <2>
